k8s/base/service-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
spec:
  selector:
    app: valkey
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
